--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "10.9.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
