--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "install": "^0.13.0",
     "ioredis": "^5.5.0",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "npm": "^11.1.0",
     "redis": "^4.7.0",
     "zod": "^3.24.2"
   }
